# SimpleEmailAgent

./: README.md  config.py  email_tools.py  generate_graph.py  graph_flow.py  llm_agent.py  main.py  pyproject.toml
others/: generate_graph.py
